--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,6 @@ layout: compress
     </div>
 
     {% include scripts.html %}
-    <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=080808&w=300&t=n&d=wRhq4hJ_smlnxeStPsIJCDMWUFotmZe-X90AUf3e9zw&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
+    <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=080808&w=400&t=m&d=wRhq4hJ_smlnxeStPsIJCDMWUFotmZe-X90AUf3e9zw&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
   </body>
 </html>
